--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fanta</title>
     <link rel="stylesheet" href="LandingPage.css">
 </head>
 <body>
+    <div id="main">
+        
+    </div>
     <script src="LandingPage.js"></script>
 </body>
 </html>
