add website code

--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
         <div class="rght d-flex-c">
           <h1 class="mainHeading">Flavour Updated</h1>
           <p class="mainP">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores,
-            sunt enim! Debitis eius distinctio, unde in quis totam, dolorem
-            cumque laborum deserunt dignissimos reprehenderit quaerat sed rerum
-            enim, obcaecati quisquam quidem magni modi laudantium nemo omnis
-            nobis provident! Temporibus quos a sequi, voluptas fuga quis commodi
-            suscipit doloribus tempora nemo.
+            Fanta Orange is a sparkling, fruity soft drink known for its vibrant orange flavor and playful, bubbly character. It's a popular choice, especially among younger consumers, for its refreshing taste and association with fun and social gatherings. The bright color and tingling bubbles add to its appeal, making it a delightful beverage to enjoy chilled or with ice, and it's often paired with snacks and meals. Fanta Orange is widely available in various package sizes and is a well-established brand within the Coca-Cola portfolio.
           </p>
           <button>Check Now</button>
         </div>
